--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,15 +4,16 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout title="Welcome to Astro.">
 	<main>
+    <a href="/two">page two</a>
 		<div transition:name="front-end">front-end</div>
 		<div transition:name="开源">开源</div>
 		<div transition:name="开a源">开a源</div>
 		<div transition:name="c开a源c">c开a源c</div>
 		<div transition:name="オープンソース">オープンソース</div>
-		<div transition:name="开$源">开$源</div>
+		<!-- <div transition:name="开$源">开$源</div>
 		<div transition:name="开\$源">开\$源</div>
-		<div transition:name="开\.源">开\.源</div>
-    <div transition:name="\\5f00\\6e90">\\5f00\\6e90</div>
+		<div transition:name="开\.源">开\.源</div> -->
+    <!-- <div transition:name="\\5f00\\6e90">\\5f00\\6e90</div> -->
 		<div transition:name="🐎👱❤">🐎👱❤</div>
 	</main>
 </Layout>
