--- a/src/pages/two.astro
+++ b/src/pages/two.astro
@@ -1,16 +1,21 @@
 ---
+import Layout from '../layouts/Layout.astro';
 ---
 
-<div transition:name="front-end">front-end</div>
-<div transition:name="开源">开源</div>
-<div transition:name="开a源">开a源</div>
-<div transition:name="c开a源c">c开a源c</div>
-<div transition:name="オープンソース">オープンソース</div>
-<div transition:name="开$源">开$源</div>
-<div transition:name="开\$源">开\$源</div>
-<div transition:name="开\.源">开\.源</div>
-<div transition:name="\\5f00\\6e90">\\5f00\\6e90</div>
-<div transition:name="🐎👱❤">🐎👱❤</div>
+<Layout title="Page Two">
+	<main>
+		<div transition:name="front-end">front-end</div>
+		<div transition:name="开源">开源</div>
+		<div transition:name="开a源">开a源</div>
+		<div transition:name="c开a源c">c开a源c</div>
+		<div transition:name="オープンソース">オープンソース</div>
+		<!-- <div transition:name="开$源">开$源</div>
+		<div transition:name="开\$源">开\$源</div>
+		<div transition:name="开\.源">开\.源</div> -->
+    <!-- <div transition:name="\\5f00\\6e90">\\5f00\\6e90</div> -->
+		<div transition:name="🐎👱❤">🐎👱❤</div>
+	</main>
+</Layout>
 
 <style>
 	main {
@@ -21,5 +26,53 @@
 		color: white;
 		font-size: 20px;
 		line-height: 1.6;
+    margin-top: 100px;
+	}
+	.astro-a {
+		position: absolute;
+		top: -32px;
+		left: 50%;
+		transform: translatex(-50%);
+		width: 220px;
+		height: auto;
+		z-index: -1;
+	}
+	h1 {
+		font-size: 4rem;
+		font-weight: 700;
+		line-height: 1;
+		text-align: center;
+		margin-bottom: 1em;
+	}
+	.text-gradient {
+		background-image: var(--accent-gradient);
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+		background-size: 400%;
+		background-position: 0%;
+	}
+	.instructions {
+		margin-bottom: 2rem;
+		border: 1px solid rgba(var(--accent-light), 25%);
+		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
+		padding: 1.5rem;
+		border-radius: 8px;
+	}
+	.instructions code {
+		font-size: 0.8em;
+		font-weight: bold;
+		background: rgba(var(--accent-light), 12%);
+		color: rgb(var(--accent-light));
+		border-radius: 4px;
+		padding: 0.3em 0.4em;
+	}
+	.instructions strong {
+		color: rgb(var(--accent-light));
+	}
+	.link-card-grid {
+		display: grid;
+		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
+		gap: 2rem;
+		padding: 0;
 	}
 </style>
