--- a/src/pages/two.astro
+++ b/src/pages/two.astro
@@ -9,9 +9,9 @@ import Layout from '../layouts/Layout.astro';
 		<div transition:name="开a源">开a源</div>
 		<div transition:name="c开a源c">c开a源c</div>
 		<div transition:name="オープンソース">オープンソース</div>
-		<!-- <div transition:name="开$源">开$源</div>
+		<!-- <div transition:name="开$源">开$源</div> -->
 		<div transition:name="开\$源">开\$源</div>
-		<div transition:name="开\.源">开\.源</div> -->
+		<div transition:name="开\.源">开\.源</div>
     <!-- <div transition:name="\\5f00\\6e90">\\5f00\\6e90</div> -->
 		<div transition:name="🐎👱❤">🐎👱❤</div>
 	</main>
